--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+	"cacheman":"~2.2.1",
     "cookie-parser": "~1.3.5",
     "cors": "*",
     "debug": "~2.2.0",
+	"dotenv": "2.0.0",
     "express": "~4.13.1",
     "express-handlebars": "*",
     "handlebars-helper-md": "*",
